--- a/MyShop/MyShop.WebUI/Views/Home/Details.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Home/Details.cshtml
@@ -11,22 +11,6 @@
     </div>
     <div class="col-lg-10">
         <dl class="dl-horizontal">
-            @*<dt>
-            @Html.DisplayNameFor(model => model.CreateAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreateAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>*@
-
             <dt>
                 @Html.DisplayNameFor(model => model.Description)
             </dt>
@@ -42,24 +26,8 @@
             <dd>
                 $@Html.DisplayFor(model => model.Price)
             </dd>
-
-            @*<dt>
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Category)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Image)
-        </dd>*@
             <dt></dt>
-            <dd><a href="#" class="btn btn-default">Add to Basket</a></dd>
+            <dd><a href="@Url.Action("AddToBasket", "Basket", new { Id=Model.Id})" class="btn btn-default">Add to Basket</a></dd>
 
             <dt></dt>
             <dd>@Html.ActionLink("Back to List", "Index")</dd>
